--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ colorama==0.4.6
 db==0.1.1
 db-sqlite3==0.0.1
 Flask==3.1.2
+gunicorn==23.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.3
 numpy==2.3.5
+packaging==25.0
 pandas==2.3.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
